# smp-submission-service

./: Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
scripts/: build-info.sh
src/smp_submitter/: app.py  config.py  consts.py  logic.py
